# BlurDialogEx

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/blurdialogex/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Application.mk  image.cpp
app/src/main/java/com/example/blurdialogex/: BlurBehindDrawable.java  MainActivity.kt  MyDialog.kt
app/src/main/java/com/example/blurdialogex/lib/: AndroidUtilities.java  ApplicationLoader.java  DispatchQueue.java  SharedConfig.java  Theme.java  Utilities.java
app/src/main/res/anim/: fade_in.xml  fade_out.xml
app/src/main/res/layout/: activity_main.xml  blur_dialog_layout.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/blurdialogex/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
